<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="150dp"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="120dp"
        android:src="@mipmap/logo"
        android:layout_marginBottom="100dp"
        android:layout_marginLeft="200dp"
        android:contentDescription="@string/logo"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nama" />

    <EditText
        android:id="@+id/namaEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/isi_nama_lengkap"
        android:inputType="textPersonName"
        android:autofillHints="name" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        />

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/isi_email"
        android:inputType="textEmailAddress"
        android:autofillHints="name" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone" />

    <EditText
        android:id="@+id/phoneEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/isi_nomor"
        android:inputType="phone"
        android:autofillHints="name" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tanggal_lahir" />

    <EditText
        android:id="@+id/dateEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/isi_tanggal_lahir"
        android:inputType="date"
        android:autofillHints="name" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/jumlah_sks" />

    <EditText
        android:id="@+id/sksEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/isi_jumlah_sks_keseluruhan"
        android:inputType="number"
        android:autofillHints="name"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end"
        >
        <Button
            android:id="@+id/simpanButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/simpan"
            android:drawableLeft="@drawable/ic_baseline_save_24"
            android:layout_marginEnd="8dp"
            />
        <Button
            android:id="@+id/batalButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/batal"
            android:drawableLeft="@drawable/ic_baseline_cancel_24"
            />

    </LinearLayout>

</LinearLayout>